src/main/gen/io/septimalmind/idealingua/idealinguaintellij/language/IdealinguaParser.java
// This is a generated file. Not intended for manual editing.
package io.septimalmind.idealingua.idealinguaintellij.language;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static io.septimalmind.idealingua.idealinguaintellij.psi.IdealinguaTypes.*;
import static io.septimalmind.idealingua.idealinguaintellij.language.parser.IdealinguaParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class IdealinguaParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return file(b, l + 1);
  }

  /* ********************************************************** */
  // (KW_ADT | KW_CHOICE) class_name (adt_free_form | adt_enclosed)
  public static boolean adt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt")) return false;
    if (!nextTokenIs(b, "<adt>", KW_ADT, KW_CHOICE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADT, "<adt>");
    r = adt_0(b, l + 1);
    r = r && class_name(b, l + 1);
    r = r && adt_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // KW_ADT | KW_CHOICE
  private static boolean adt_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_0")) return false;
    boolean r;
    r = consumeToken(b, KW_ADT);
    if (!r) r = consumeToken(b, KW_CHOICE);
    return r;
  }

  // adt_free_form | adt_enclosed
  private static boolean adt_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_2")) return false;
    boolean r;
    r = adt_free_form(b, l + 1);
    if (!r) r = adt_enclosed(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // LBRACE adt_values RBRACE | LPAREN adt_values RPAREN
  public static boolean adt_enclosed(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_enclosed")) return false;
    if (!nextTokenIs(b, "<adt enclosed>", LBRACE, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADT_ENCLOSED, "<adt enclosed>");
    r = adt_enclosed_0(b, l + 1);
    if (!r) r = adt_enclosed_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // LBRACE adt_values RBRACE
  private static boolean adt_enclosed_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_enclosed_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && adt_values(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // LPAREN adt_values RPAREN
  private static boolean adt_enclosed_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_enclosed_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && adt_values(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // EQUAL separator_enum? adt_value (separator_enum adt_value)*
  public static boolean adt_free_form(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_free_form")) return false;
    if (!nextTokenIs(b, EQUAL)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUAL);
    r = r && adt_free_form_1(b, l + 1);
    r = r && adt_value(b, l + 1);
    r = r && adt_free_form_3(b, l + 1);
    exit_section_(b, m, ADT_FREE_FORM, r);
    return r;
  }

  // separator_enum?
  private static boolean adt_free_form_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_free_form_1")) return false;
    separator_enum(b, l + 1);
    return true;
  }

  // (separator_enum adt_value)*
  private static boolean adt_free_form_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_free_form_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!adt_free_form_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "adt_free_form_3", c)) break;
    }
    return true;
  }

  // separator_enum adt_value
  private static boolean adt_free_form_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_free_form_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = separator_enum(b, l + 1);
    r = r && adt_value(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // class_type (KW_AS IDENTIFIER)?
  public static boolean adt_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_value")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = class_type(b, l + 1);
    r = r && adt_value_1(b, l + 1);
    exit_section_(b, m, ADT_VALUE, r);
    return r;
  }

  // (KW_AS IDENTIFIER)?
  private static boolean adt_value_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_value_1")) return false;
    adt_value_1_0(b, l + 1);
    return true;
  }

  // KW_AS IDENTIFIER
  private static boolean adt_value_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_value_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KW_AS, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // adt_value (separator_enum? adt_value)*
  public static boolean adt_values(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_values")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = adt_value(b, l + 1);
    r = r && adt_values_1(b, l + 1);
    exit_section_(b, m, ADT_VALUES, r);
    return r;
  }

  // (separator_enum? adt_value)*
  private static boolean adt_values_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_values_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!adt_values_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "adt_values_1", c)) break;
    }
    return true;
  }

  // separator_enum? adt_value
  private static boolean adt_values_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_values_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = adt_values_1_0_0(b, l + 1);
    r = r && adt_value(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // separator_enum?
  private static boolean adt_values_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "adt_values_1_0_0")) return false;
    separator_enum(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // (KW_ALIAS | KW_TYPE | KW_USING) class_name EQUAL idl_identifier
  public static boolean alias(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALIAS, "<alias>");
    r = alias_0(b, l + 1);
    r = r && class_name(b, l + 1);
    r = r && consumeToken(b, EQUAL);
    r = r && idl_identifier(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // KW_ALIAS | KW_TYPE | KW_USING
  private static boolean alias_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_0")) return false;
    boolean r;
    r = consumeToken(b, KW_ALIAS);
    if (!r) r = consumeToken(b, KW_TYPE);
    if (!r) r = consumeToken(b, KW_USING);
    return r;
  }

  /* ********************************************************** */
  // typed_value | just_value
  public static boolean any_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_value")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANY_VALUE, "<any value>");
    r = typed_value(b, l + 1);
    if (!r) r = just_value(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // enum | adt | alias | id | mixin | dto
  public static boolean base_type_member(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_type_member")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BASE_TYPE_MEMBER, "<base type member>");
    r = enum_$(b, l + 1);
    if (!r) r = adt(b, l + 1);
    if (!r) r = alias(b, l + 1);
    if (!r) r = id(b, l + 1);
    if (!r) r = mixin(b, l + 1);
    if (!r) r = dto(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // TRUE | FALSE
  public static boolean bool_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bool_literal")) return false;
    if (!nextTokenIs(b, "<bool literal>", FALSE, TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOL_LITERAL, "<bool literal>");
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (KW_BUZZER | KW_SENDER) buzzer_name (LBRACE buzzer_method* RBRACE | LPAREN buzzer_method* RPAREN)
  public static boolean buzzer(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer")) return false;
    if (!nextTokenIs(b, "<buzzer>", KW_BUZZER, KW_SENDER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUZZER, "<buzzer>");
    r = buzzer_0(b, l + 1);
    r = r && buzzer_name(b, l + 1);
    r = r && buzzer_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // KW_BUZZER | KW_SENDER
  private static boolean buzzer_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_0")) return false;
    boolean r;
    r = consumeToken(b, KW_BUZZER);
    if (!r) r = consumeToken(b, KW_SENDER);
    return r;
  }

  // LBRACE buzzer_method* RBRACE | LPAREN buzzer_method* RPAREN
  private static boolean buzzer_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = buzzer_2_0(b, l + 1);
    if (!r) r = buzzer_2_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LBRACE buzzer_method* RBRACE
  private static boolean buzzer_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && buzzer_2_0_1(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // buzzer_method*
  private static boolean buzzer_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!buzzer_method(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "buzzer_2_0_1", c)) break;
    }
    return true;
  }

  // LPAREN buzzer_method* RPAREN
  private static boolean buzzer_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_2_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && buzzer_2_1_1(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // buzzer_method*
  private static boolean buzzer_2_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_2_1_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!buzzer_method(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "buzzer_2_1_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // (KW_LINE | KW_EVENT) buzzer_method_name (LBRACE buzzer_methods RBRACE | LPAREN buzzer_methods RPAREN) buzzer_method_output
  public static boolean buzzer_method(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_method")) return false;
    if (!nextTokenIs(b, "<buzzer method>", KW_EVENT, KW_LINE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUZZER_METHOD, "<buzzer method>");
    r = buzzer_method_0(b, l + 1);
    r = r && buzzer_method_name(b, l + 1);
    r = r && buzzer_method_2(b, l + 1);
    r = r && buzzer_method_output(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // KW_LINE | KW_EVENT
  private static boolean buzzer_method_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_method_0")) return false;
    boolean r;
    r = consumeToken(b, KW_LINE);
    if (!r) r = consumeToken(b, KW_EVENT);
    return r;
  }

  // LBRACE buzzer_methods RBRACE | LPAREN buzzer_methods RPAREN
  private static boolean buzzer_method_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_method_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = buzzer_method_2_0(b, l + 1);
    if (!r) r = buzzer_method_2_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // LBRACE buzzer_methods RBRACE
  private static boolean buzzer_method_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_method_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && buzzer_methods(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // LPAREN buzzer_methods RPAREN
  private static boolean buzzer_method_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_method_2_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && buzzer_methods(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // <<remapIfKeyword>> IDENTIFIER
  public static boolean buzzer_method_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_method_name")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUZZER_METHOD_NAME, "<buzzer method name>");
    r = remapIfKeyword(b, l + 1);
    r = r && consumeToken(b, IDENTIFIER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // (separator_signature output (separator_err output)? )?
  public static boolean buzzer_method_output(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_method_output")) return false;
    Marker m = enter_section_(b, l, _NONE_, BUZZER_METHOD_OUTPUT, "<buzzer method output>");
    buzzer_method_output_0(b, l + 1);
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // separator_signature output (separator_err output)?
  private static boolean buzzer_method_output_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_method_output_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = separator_signature(b, l + 1);
    r = r && output(b, l + 1);
    r = r && buzzer_method_output_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (separator_err output)?
  private static boolean buzzer_method_output_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_method_output_0_2")) return false;
    buzzer_method_output_0_2_0(b, l + 1);
    return true;
  }

  // separator_err output
  private static boolean buzzer_method_output_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_method_output_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = separator_err(b, l + 1);
    r = r && output(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // simple_struct_embed | simple_struct_field
  public static boolean buzzer_method_param(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_method_param")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUZZER_METHOD_PARAM, "<buzzer method param>");
    r = simple_struct_embed(b, l + 1);
    if (!r) r = simple_struct_field(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // buzzer_method_param? (COMMA buzzer_method_param)*
  public static boolean buzzer_methods(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_methods")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUZZER_METHODS, "<buzzer methods>");
    r = buzzer_methods_0(b, l + 1);
    r = r && buzzer_methods_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // buzzer_method_param?
  private static boolean buzzer_methods_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_methods_0")) return false;
    buzzer_method_param(b, l + 1);
    return true;
  }

  // (COMMA buzzer_method_param)*
  private static boolean buzzer_methods_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_methods_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!buzzer_methods_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "buzzer_methods_1", c)) break;
    }
    return true;
  }

  // COMMA buzzer_method_param
  private static boolean buzzer_methods_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_methods_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && buzzer_method_param(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // <<remapIfKeyword>> IDENTIFIER
  public static boolean buzzer_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "buzzer_name")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BUZZER_NAME, "<buzzer name>");
    r = remapIfKeyword(b, l + 1);
    r = r && consumeToken(b, IDENTIFIER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
